# osso

./: Dockerfile  osso-ingress.yml  pyproject.toml  skaffold.yaml
k8s/: deploy.yml
osso/: app.py
templates/Login_v5/: index.html
