[tool.poetry]
name = "osso"
version = "0.1.0"
description = ""
authors = ["Alessandro Ogier <alessandro.ogier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.2"
uvicorn = "^0.11.3"
starlette-authlib = "^0.1.5"
pyyaml = "^5.3"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
python-multipart = "^0.0.5"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
